packages/ibm-products-styles/src/components/Datagrid/styles/_datagrid.scss
/* ... */
.#{$block-class}__grid-container::-webkit-scrollbar-thumb {
  background-color: $text-placeholder;
}

.#{$block-class}__grid-container::-webkit-scrollbar {
  width: 6px;
  background-color: $background;
}

.#{$block-class} th.#{$block-class}__with-slug {
  /* stylelint-disable-next-line carbon/theme-token-use */
  box-shadow: inset 0 1px $ai-border-strong;
}

.#{$block-class} th.#{$block-class}__with-slug,
.#{$block-class} td.#{$block-class}__slug--cell {
  @include ai-table-gradient();
}

.#{$block-class}
  .#{c4p-settings.$carbon-prefix}--data-table
  tbody
  tr.#{$block-class}__slug--row,
.#{$block-class}
  .#{c4p-settings.$carbon-prefix}--data-table
  tbody
  tr.#{$block-class}__slug--row
  + .#{$block-class}__expanded-row {
  @include ai-table-gradient();

  background-attachment: fixed;
}

.#{$block-class}
  .#{c4p-settings.$carbon-prefix}--data-table
  tbody
  tr.#{$block-class}__slug--row {
  /* stylelint-disable-next-line carbon/theme-token-use */
  box-shadow: inset 1px 0 $ai-border-strong;
}

.#{$block-class}
  .#{c4p-settings.$carbon-prefix}--data-table
  tbody
  tr.#{$block-class}__slug--row:hover,
.#{$block-class}
  .#{c4p-settings.$carbon-prefix}--data-table
  tbody
  tr.#{$block-class}__slug--row.#{c4p-settings.$carbon-prefix}--data-table--selected:hover,
.#{$block-class}
  .#{c4p-settings.$carbon-prefix}--data-table
  tbody
  tr.#{$block-class}__slug--row.#{$block-class}__carbon-row-expanded:hover
  + .#{$block-class}__expanded-row,
.#{$block-class}
  .#{c4p-settings.$carbon-prefix}--data-table
  tbody
  tr.#{$block-class}__expandable-row--hover.#{$block-class}__slug--row {
  @include ai-table-gradient('hover');
}

.#{$block-class}
  .#{c4p-settings.$carbon-prefix}--data-table
  tbody
  tr.#{$block-class}__expandable-row--hover.#{$block-class}__slug--row
  td {
  background-color: transparent;
}

.#{$block-class}
  .#{c4p-settings.$carbon-prefix}--data-table
  tbody
  tr.#{$block-class}__slug--row.#{c4p-settings.$carbon-prefix}--data-table--selected {
  @include ai-table-gradient('selected');
}

.#{$block-class}
  th.#{$block-class}__with-slug
  .#{c4p-settings.$carbon-prefix}--slug {
  margin-left: $spacing-03;
}

.#{$block-class}__grid-container {
  display: block;
  width: 100%;
  padding-top: 0;

  .#{c4p-settings.$carbon-prefix}--data-table-header__description {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }

  .#{c4p-settings.$carbon-prefix}--data-table-header__title {
    overflow: hidden;
    max-width: 80ch;
    text-overflow: ellipsis;
    white-space: nowrap;

    @include breakpoint.breakpoint(md) {
      max-width: 55ch;
    }
  }

  .#{c4p-settings.$carbon-prefix}--data-table-content {
    width: 100%;
    height: 100%;
    overflow-x: auto;
  }

  .#{$block-class}-filter-panel
    + .#{$block-class}__table-container-inner
    .#{c4p-settings.$carbon-prefix}--data-table-content {
    height: fit-content;
  }

  table.#{$block-class}__table-simple {
    display: flex;
    overflow: auto;
    max-height: 100%;
    flex-direction: column;
    background-color: $layer-01;
  }

  .#{$block-class}__head {
    display: flex;
  }

  .#{$block-class}__head .header {
    /* Each cell should grow equally */
    width: 1%;
    align-items: center;
  }

  .#{$block-class}__virtual-scrollbar {
    //makes thin scrollbar in chrome and firefox
    scrollbar-width: thin;
  }

  .#{$block-class}__virtual-scrollbar::-webkit-scrollbar-thumb {
    background-color: $text-placeholder;
  }

  .#{$block-class}__virtual-scrollbar::-webkit-scrollbar {
    width: 6px;
    background-color: $background;
  }

  .#{$block-class}__cell {
    display: flex;
    /* Each cell should grow equally */
    width: 1%;
  }

  .#{$block-class}__defaultStringRenderer {
    overflow: hidden;
    width: 100%;
    text-overflow: ellipsis;
    white-space: nowrap;
  }

  .#{$block-class}__defaultStringRenderer.#{$block-class}__defaultStringRenderer--multiline {
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2;
    white-space: initial;
  }

  .#{$block-class}__defaultStringRenderer.#{$block-class}__defaultStringRenderer--slug {
    width: fit-content;
  }

  .#{$block-class}__expanded-row {
    display: flex;
    overflow: hidden;
    width: 100%;
    height: 100%;
    flex-direction: column;
  }

  .#{$block-class}__carbon-row {
    /* stylelint-disable-next-line declaration-no-important */
    flex: none !important;

    .#{$block-class}__carbon-row:hover a {
      /* stylelint-disable-next-line declaration-no-important */
      color: $link-primary-hover !important;
    }
  }

  .#{$block-class}__carbon-row td {
    /* stylelint-disable-next-line declaration-no-important */
    background-color: $layer-01;
  }

  .#{$block-class}__carbon-row:hover td {
    /* stylelint-disable-next-line declaration-no-important */
    background-color: $layer-hover-01;
  }

  .#{c4p-settings.$carbon-prefix}--data-table--selected td {
    /* stylelint-disable-next-line declaration-no-important */
    background-color: $layer-selected-01;
  }

  .#{c4p-settings.$carbon-prefix}--select-input {
    -webkit-appearance: none; // could be fixed by post-css plugin
  }

  th.#{c4p-settings.$carbon-prefix}--table-column-checkbox {
    display: block;
  }

  td.#{c4p-settings.$carbon-prefix}--table-column-checkbox,
  th.#{c4p-settings.$carbon-prefix}--table-column-checkbox {
    /* stylelint-disable-next-line declaration-no-important */
    width: $spacing-09 !important;
    /* stylelint-disable-next-line declaration-no-important */
    padding-right: $spacing-05 !important;
  }
}

.#{$block-class}__empty-state .#{$block-class}__table-simple {
  display: table;
  height: 100%;

  .#{c4p-settings.$pkg-prefix}--empty-state {
    max-width: 280px;
  }
}

.#{$block-class}__empty-state
  .#{c4p-settings.$carbon-prefix}--data-table
  tbody
  tr:not([data-child-row]):hover {
  background: inherit;
}
/* ... */

